dataset1235/2025-2/805158916/users/2931402603/executions/1584167357_1026882843.log
== RUN (2025-08-27 14:27:41)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:08)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:22:56)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:40)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:39)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:55)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:31)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:37)
-- CODE: 
raio = float(input())
area = 3.1415926 * raio*raio
print(area)
-- EXECUTION TIME: 
0.00666667
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981500000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908224000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48450935
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.38933440000005
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.670773856
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.36058415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:53)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:24:58)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:23)
-- CODE: 
raio = float(input())
area = 3.1415926 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981500000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908224000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48450935
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.38933440000005
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.670773856
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.36058415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:58)
-- CODE: 
raio = float(input())
area = 3.14 * raio**2
print(area)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:20:18)
-- CODE: 
raio = float(input())
pi = 3,14
area = pi * raio * raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:59)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:53)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:36)
-- CODE: 
raio = float(input())
area = 3.1415926 * raio*raio
print(area)
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981500000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908224000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48450935
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.38933440000005
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.670773856
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.36058415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:20:07)
-- CODE: 
raio = float(input())
pi = 3,14
area = pi * raio * raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = pi * raio * raio
           ~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:28:40)
-- CODE: 
raio = float(input())
area = 3.1 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007750000000000002
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
31.744000000000007
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
37.975
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
446.40000000000003
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
218.73600000000002
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
341.77500000000003
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:22:06)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:22:01)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:24:19)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:24:20)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:27:34)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:22:43)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:53)
-- CODE: 
raio = float(input())
area = pi * raio * raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:09)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:31:25)
-- CODE: 
raio = float(input())
area = 3.14159 * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.389
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6706
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3603
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:27:22)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:19:42)
-- CODE: 
raio = float(input())
area = pi * raio * raio
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio * raio
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:28:57)
-- CODE: 
raio = float(input())
area = 3.14159 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853975000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169881600000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4844775
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.38895999999994
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6705904
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3602975
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:43)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:21)
-- CODE: 
raio = float(input())
area = 3.141 * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007852500000000002
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.16384000000001
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.477250000000005
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.304
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.62896000000003
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.29525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:23:42)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:29)
-- CODE: 
raio = float(input())
area = 3.14 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.15999999999997
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:25:08)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:48)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:37)
-- CODE: 
raio = float(input())
area = 3.1415926 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981500000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908224000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48450935
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.38933440000005
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.670773856
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.36058415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:29:34)
-- CODE: 
raio = float(input())
area = 3.1415926 * raio*raio
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981500000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908224000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48450935
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.38933440000005
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.670773856
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.36058415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:50)
-- CODE: 
raio = float(input())
pi = float(input())
area = pi * raio*raio
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = float(input())
               ^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:31:34)
-- CODE: 
raio = float(input())
area = 3.1415926 * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
